# third_party

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.py  build.sh  build_shadercross.sh  subtrees.txt  update.py
.github/workflows/: artifacts.yml
cmake/toolchain/: MingwBootstrap.cmake  mingw.cmake
src/SDL_gpu_shadercross/: CMakeLists.txt
src/dav1dfile/ext/: dav1d.cmd
