cmake_minimum_required(VERSION 3.28)

###############################################################################

add_subdirectory(src/SDL3)

###############################################################################

add_subdirectory(src/SPIRV-Cross)

###############################################################################

add_subdirectory(src/shaderc)

###############################################################################
